--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    namespace 'id.ac.unpas.showroom'
+    namespace 'id.ac.unpas.tubesshowroomkdrt'
     compileSdk 33
 
     defaultConfig {
-        applicationId "id.ac.unpas.showroom"
-        minSdk 24
+        applicationId "id.ac.unpas.tubesshowroomkdrt"
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -29,17 +29,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.7'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -50,46 +50,34 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
-    implementation 'androidx.compose.ui:ui-graphics'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.compose.material:material:1.4.2'
+    implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'androidx.room:room-common:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-
-    //pert.5
-    implementation "androidx.room:room-runtime:2.5.0"
-    implementation "androidx.room:room-ktx:2.5.0"
-    kapt "androidx.room:room-compiler:2.5.0"
-
-    //uuid
-    implementation "com.benasher44:uuid:0.4.0"
-
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-rc01"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
-
-    //room
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    // room
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
-    testImplementation "androidx.arch.core:core-testing:2.2.0"
-
+    // uuid
+    implementation 'com.benasher44:uuid:0.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.1'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+    // impelement dagger
+    implementation "com.google.dagger:hilt-android:2.45"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    kapt "com.google.dagger:hilt-compiler:2.45"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.45"
+    kaptAndroidTest "com.google.dagger:hilt-compiler:2.45"
     // network
     implementation "com.github.skydoves:sandwich:1.0.9"
     implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
@@ -97,15 +85,15 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:4.7.2"
     // whatIf
     implementation "com.github.skydoves:whatif:1.0.7"
-
-    //pert.7
-    implementation "com.google.dagger:hilt-android:2.45"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    kapt "com.google.dagger:hilt-compiler:2.45"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
-    androidTestImplementation "com.google.dagger:hilt-android-testing:2.45"
-    kaptAndroidTest "com.google.dagger:hilt-compiler:2.45"
-
     //compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    //material dialog
+    implementation "io.github.vanpra.compose-material-dialogs:core:0.9.0"
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.9.0"
+    //material icon
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    //navigation compose
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+    // Splash screen Api
+    implementation("androidx.core:core-splashscreen:1.0.1")
 }
