--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "TubesShowroomKDRT"
+rootProject.name = "TubesDudaksil"
 include ':app'
